// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on GifGrid should render correctly 1`] = `
<Fragment>
  <h3>
    One Punch Man
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests on GifGrid should render gifs 1`] = `
<Fragment>
  <h3>
    One Punch Man
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="Levi"
      key="Levi"
      title="Levi GIF"
      url="https://localhost/gifs/levi.gif"
    />
  </div>
</Fragment>
`;
